--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,34 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="sidebar">
+        <h1>To Do List</h1>
+        <h4>Today</h4>
+        <h3>Projects</h3>
+        <ul>
+            <li>Default</li>
+        </ul>
+        <button>New Project</button>
+    </div>
+    <div class="mainContent">
+        <button id="newToDo">New To Do</button>
+        <dialog>
+           <form action="submit">
+            <input type="text" id="title">
+            <label for="title">Title</label>
+
+            <textarea name="description" id="description" cols="30" rows="10"></textarea>
+
+            <input type="date" id="date">
+            <label for="date">Title</label>
+
+            <input type="checkbox" id="priority1">
+            <label for="priority1">Title</label>
+            <input type="checkbox" id="priority2">
+            <label for="priority2">Title</label>
+            
+           </form> 
+        </dialog>
+    </div>
 </body>
 </html>
