--- a/src/template.html
+++ b/src/template.html
@@ -6,48 +6,49 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="sidebar">
-        <h1>To Do List</h1>
-        <h4>Today</h4>
-        <h3>Projects</h3>
-        <ul>
-            <li>Default</li>
-        </ul>
-        <button id="newProject">New Project</button>
-        <dialog class="projectDialog">
-            <form action="submit" id="Project">
-                <input type = "text" id="NewProjectImput" required>
-                <button type = "submit" class= "accept"> Accept </button>
-                <button type = "button" class = "cancel">Cancel</button>
-            </form>
-        </dialog>
-    </div>
-    <div class="mainContent">
-        <button id="newToDo">New To Do</button>
-        <dialog id="newTodoDialog">
-            <button class="close">Close</button>
-           <form action="submit">
-            <label for="title">
-                <input type="text" id="title">Title
-            </label>
-            <label for="description"> Description
-                <textarea name="description" id="description" cols="20" rows="2"></textarea>
-            </label> <br>
-            <label for="date">
-                <input type="date" id="date">Due Date
-            </label> <br>
-            <label> 
-                <input type="radio" name="opcion" value="opcion1"> Opción 1
-            </label>
-            <label>
-                <input type="radio" name="opcion" value="opcion2"> Opción 2
-            </label>
-            <label>
-                <input type="radio" name="opcion" value="opcion3"> Opción 3
-            </label> <br>
-            <button type="submit">Create</button>
-           </form> 
-        </dialog>
-    </div>
+        <div class="sidebar">
+            <h1>To Do List</h1>
+            <h4>Today</h4>
+            <h3>Projects</h3>
+            <ul>
+                <li>Default</li>
+            </ul>
+            <button id="newProject">New Project</button>
+            <dialog class="projectDialog">
+                <form action="submit" id="Project">
+                    <input type = "text" id="NewProjectImput" required>
+                    <button type = "submit" class= "accept"> Accept </button>
+                    <button type = "button" class = "cancel">Cancel</button>
+                </form>
+            </dialog>
+        </div>
+        <div class="mainContent">
+            <button class="burger">x</button>
+            <button id="newToDo">New To Do</button>
+            <dialog id="newTodoDialog">
+                <button class="close">Close</button>
+            <form action="submit">
+                <label for="title">
+                    <input type="text" id="title">Title
+                </label>
+                <label for="description"> Description
+                    <textarea name="description" id="description" cols="20" rows="2"></textarea>
+                </label> <br>
+                <label for="date">
+                    <input type="date" id="date">Due Date
+                </label> <br>
+                <label> 
+                    <input type="radio" name="opcion" value="opcion1"> Opción 1
+                </label>
+                <label>
+                    <input type="radio" name="opcion" value="opcion2"> Opción 2
+                </label>
+                <label>
+                    <input type="radio" name="opcion" value="opcion3"> Opción 3
+                </label> <br>
+                <button type="submit">Create</button>
+            </form> 
+            </dialog>
+        </div>
 </body>
 </html>
