--- a/src/template.html
+++ b/src/template.html
@@ -11,7 +11,6 @@
             <h4>Today</h4>
             <h3>Projects</h3>
             <ul>
-                <li>Default</li>
             </ul>
             <button id="newProject">New Project</button>
             <dialog class="projectDialog">
@@ -25,9 +24,8 @@
         <div class="mainContent">
             <button class="burger">x</button>
             <button id="newToDo">New To Do</button>
-            <dialog id="newTodoDialog">
-                <button class="close">Close</button>
-            <form action="submit">
+        <dialog id="newTodoDialog">
+            <form action="submit" id="createTask">
                 <label for="title">
                     <input type="text" id="title">Title
                 </label>
@@ -38,17 +36,18 @@
                     <input type="date" id="date">Due Date
                 </label> <br>
                 <label> 
-                    <input type="radio" name="opcion" value="opcion1"> Opción 1
+                    <input type="radio" name="opcion" value="opcion1"> High
                 </label>
                 <label>
-                    <input type="radio" name="opcion" value="opcion2"> Opción 2
+                    <input type="radio" name="opcion" value="opcion2"> Medium
                 </label>
                 <label>
-                    <input type="radio" name="opcion" value="opcion3"> Opción 3
+                    <input type="radio" name="opcion" value="opcion3"> Low
                 </label> <br>
                 <button type="submit">Create</button>
+                <button id="close">Close</button>
             </form> 
-            </dialog>
-        </div>
+        </dialog>
+    </div>
 </body>
 </html>
